--- a/public/template/assets/css/layout/style.css
+++ b/public/template/assets/css/layout/style.css
@@ -72,3 +72,53 @@ body {
 .btn.search-button:hover {
     color: var(--secondary-color-2);
 }
+
+.form-input{
+    color: var(--primary-color);
+    background: none;
+    border: none;
+    border-bottom: 2px solid var(--primary-color);
+    margin: 1em 0;
+    padding: .6em 1em;
+    outline: none;
+    box-sizing: border-box;
+    width: 100%;
+    transition: .2s;
+}
+
+.form-input::placeholder {
+    color: var(--primary-color);
+    font-weight: bold;
+    transition: .5s;
+}
+
+.form-input:focus::placeholder {
+    color: var(--secondary-color-2);
+}
+
+.form-input:focus {
+    color: var(--secondary-color-2);
+    background: none;
+    border: none;
+    border-bottom: 2px solid var(--secondary-color-2);
+}
+
+.form-modal {
+    flex-direction: column;
+}
+
+.form-left, 
+.form-right {
+    width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+    .form-modal {
+        flex-direction: row;
+    }
+
+    .form-left, 
+    .form-right {
+        width: 50%;
+    }
+}
