--- a/public/template/assets/css/layout/style.css
+++ b/public/template/assets/css/layout/style.css
@@ -1,31 +1,3 @@
-/* input.topbar-search-input#topbar-search-input:focus {
-    border: 1px solid #F9F9F9;
-    color: #F9F9F9;
-}
-
-input.form-input:focus {
-    border: 1px solid #F9F9F9;
-    color: #F9F9F9;
-}
-
-.table-vacancy-actions {
-    display: flex;
-    flex-direction: column;
-}
-
-.footer-social-media a {
-    color: grey;
-    transition: .5s;
-}
-
-.footer-social-media a:hover {
-    color: #F9F9F9;
-} */
-
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-
 :root {
     --primary-color : #000;
     --secondary-color-1 : #F9F9F9;
@@ -35,6 +7,21 @@ body {
     --optional-color-2 : #191c24;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.bg-secondary-color-2 {
+    background-color: var(--secondary-color-2);
+}
+
+/* Pagination Top Start */
+.pagination-top-box {
+    display: none;
+}
+/* Pagination Top End */
+
+/* Search Start */
 .search-input{
     color: var(--primary-color);
     background: none;
@@ -65,14 +52,20 @@ body {
     border-bottom: 2px solid var(--secondary-color-2);
 }
 
-.btn.search-button {
+.search-button {
     color: var(--primary-color);
 }
 
-.btn.search-button:hover {
+.search-button:hover {
     color: var(--secondary-color-2);
 }
 
+.search-button-text {
+    display: none;
+}
+/* Search End */
+
+/* Form Input Start */
 .form-input{
     color: var(--primary-color);
     background: none;
@@ -111,8 +104,101 @@ body {
 .form-right {
     width: 100%;
 }
+/* Form Input End */
+
+/* Pagination Bottom Start */
+.pagination-bottom-box {
+    display: block;
+}
+/* Pagination Bottom End */
+
+/* Information Start */
+.information-box {
+    flex-direction: column;
+}
+
+.apllicants-box {
+    margin-left: .5em;
+}
+/* Information End */
+
+/* Change Profile And Signature Start */
+trix-toolbar [data-trix-button-group="file-tools"] {
+    display: none;
+}
+
+trix-toolbar [data-trix-button-group] {
+    background-color: whitesmoke;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+}
+
+.preview {
+    overflow: hidden;
+    width: 160px;
+    height: 160px;
+    margin: 10px;
+    border: 1px solid red;
+}
+
+.modal-lg {
+    max-width: 1000px !important;
+}
+
+.signature-pad {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 400px;
+    height: 200px;
+}
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.signature-pad {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 400px;
+    height: 200px;
+    background-color: white;
+}
+/* Change Profile And Signature End */
 
 @media only screen and (min-width: 768px) {
+    /* Pagination Top Start */
+    .pagination-top-box {
+        width: 25%;
+        display: block;
+    }
+    /* Pagination Top End */
+
+    /* Search Start */
+    .search-top-box {
+        width: 50%;
+    }
+
+    .search-button-text {
+        display: inline;
+    }
+
+    .search-button-top-box {
+        width: 25%;
+    }
+    /* Search End */
+
+    /* Form Input Start */
     .form-modal {
         flex-direction: row;
     }
@@ -121,4 +207,21 @@ body {
     .form-right {
         width: 50%;
     }
+    /* Form Input End */
+
+    /* Pagination Bottom Start */
+    .pagination-bottom-box {
+        display: none;
+    }
+    /* Pagination Bottom End */
+
+    /* Information Start */
+    .information-box {
+        flex-direction: row;
+    }
+
+    .apllicants-box {
+        margin-left: 5em;
+    }
+    /* Information End */
 }
