--- a/public/template/assets/css/style.css
+++ b/public/template/assets/css/style.css
@@ -1,117 +1,3 @@
-:root {
-  --primary-color : #000;
-  --secondary-color-1 : #F9F9F9;
-  --secondary-color-2 : #0edfb9;
-  --secondary-color-3 : red;
-  --optional-color-1 : #76808A;
-  --optional-color-2 : #191c24;
-}
-
-.bg-primary-color {
-  background-color: var(--primary-color);
-}
-
-.bg-secondary-color-1 {
-  background-color: var(--secondary-color-1);
-}
-
-.bg-secondary-color-2 {
-  background-color: var(--secondary-color-2);
-}
-
-.bg-secondary-color-3 {
-  background-color: var(--secondary-color-3);
-}
-
-.bg-optional-color-1 {
-  background-color: var(--optional-color-1);
-}
-
-.bg-optional-color-2 {
-  background-color: var(--optional-color-2);
-}
-
-.tx-primary-color {
-  color: var(--primary-color);
-}
-
-.tx-secondary-color-1 {
-  color: var(--secondary-color-1);
-}
-
-.tx-secondary-color-2 {
-  color: var(--secondary-color-2)
-}
-
-.tx-secondary-color-3 {
-  color: var(--secondary-color-3)
-}
-
-.tx-optional-color-1 {
-  color: var(--optional-color-1)
-}
-
-.tx-optional-color-2 {
-  color: var(--optional-color-2)
-}
-
-.card-header {
-  color: var(--secondary-color-1);
-  font-size: 2em;
-  font-weight: bold;
-  letter-spacing: 1px;
-}
-
-.img-preview {
-  width: 60%;
-}
-
-.password-icon-eye {
-  cursor: pointer;
-  color: var(--secondary-color-1);
-  position: absolute;
-  top: 40%;
-  bottom: 40%;
-  right: 5%;
-  display: none;
-}
-
-.password-icon-eye-slash {
-  cursor: pointer;
-  color: var(--secondary-color-1);
-  position: absolute;
-  top: 40%;
-  bottom: 40%;
-  right: 5%;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-}
-
-.search-input{
-    color: var(--primary-color);
-    background: none;
-    border: none;
-    border-bottom: 2px solid var(--primary-color);
-    margin: 1em 0;
-    padding: .6em 1em;
-    outline: none;
-    box-sizing: border-box;
-    width: 100%;
-    transition: .5s ease;
-}
-
-.search-input::placeholder {
-    color: var(--primary-color);
-    font-weight: bold;
-    transition: .5s;
-}
-
-.search-input:focus::placeholder {
-    color: var(--primary-color);
-}
-
 /*-------------------------------------------------------------------
   ===== Table of Contents =====
 
@@ -10805,16 +10691,16 @@ textarea.is-invalid.tt-hint {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #0d6efd;
+  color: white;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out; }
   @media (prefers-reduced-motion: reduce) {
     .nav-link {
       transition: none; } }
   .nav-link:hover, .nav-link:focus {
-    color: #0a58ca; }
+    color: white; }
   .nav-link.disabled {
-    color: #6c757d;
+    color: white;
     pointer-events: none;
     cursor: default; }
 
@@ -10827,7 +10713,7 @@ textarea.is-invalid.tt-hint {
     border-top-left-radius: 0.25rem;
     border-top-right-radius: 0.25rem; }
     .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
-      border-color: #2c2e33 #2c2e33 #2c2e33;
+      border-color: #0edfb9;
       isolation: isolate; }
     .nav-tabs .nav-link.disabled {
       color: #6c757d;
